examples/test/testpolicy10051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10051
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key37: value21
      key14: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value25
          key20: value38
          key29: value0
      podSelector:
        matchLabels:
          key19: value19
          key27: value17
          key25: value28
